--- a/views/delnice.html
+++ b/views/delnice.html
@@ -2,22 +2,22 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css"  href="{{ROOT}}/static/main.css">
+    <link rel="stylesheet" type="text/css"  href="{{ROOT}}static/main.css">
     <meta charset='utf8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <header id='header'>
       <a class="logo" href='{{ROOT}}/zacetna_stran/'>Domov</a>
       <nav>
-        <a href="{{ROOT}}/borze/">Borze</a>
-        <a href="{{ROOT}}/sektorji/">Sektorji</a>
-        <a href="{{ROOT}}/topdelnice/"> Top delnice</a>
+        <a href="{{ROOT}}borze/">Borze</a>
+        <a href="{{ROOT}}sektorji/">Sektorji</a>
+        <a href="{{ROOT}}topdelnice/"> Top delnice</a>
         %if stanje == 0:
-        <a href="{{ROOT}}/prijava/">Prijava</a>
-        <a href="{{ROOT}}/registracija/">Registracija</a>
+        <a href="{{ROOT}}prijava/">Prijava</a>
+        <a href="{{ROOT}}registracija/">Registracija</a>
         %end 
         %if stanje != 0:
-        <a href="{{ROOT}}/uporabnik/{{stanje}}/">Moj profil</a>
-        <a href="{{ROOT}}/odjava/">Odjava</a>
+        <a href="{{ROOT}}uporabnik/{{stanje}}/">Moj profil</a>
+        <a href="{{ROOT}}odjava/">Odjava</a>
         %end
       </nav>
       </header>
@@ -35,7 +35,7 @@
 <tr>
     <th>{{oznaka}}</th>
     <th>{{kolicina}}</th>
-    <th><a href="{{ROOT}}/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj<a></th>
+    <th><a href="{{ROOT}}uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj<a></th>
 %end
 </table>
 <h4> Te delnice so skupno vredne {{vrednost_portfelja}} EUR.</h4>
@@ -55,10 +55,10 @@
     <th>{{oznaka}}</th>
     <th>{{ime}}</th>
     <th>{{cena}} EUR</th>
-    <th><a href="{{ROOT}}/borze/{{borza}}">{{borza}}</a></th>
-    <th><a href="{{ROOT}}/sektorji/{{sektor}}">{{sektor}}</a></th>
+    <th><a href="{{ROOT}}borze/{{borza}}">{{borza}}</a></th>
+    <th><a href="{{ROOT}}sektorji/{{sektor}}">{{sektor}}</a></th>
     <th>{{kolicina}}</th>
-    <th><a href="{{ROOT}}/uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj</a></th>
+    <th><a href="{{ROOT}}uporabnik/{{stanje}}/trgovanje/{{oznaka}}/">Kupi/Prodaj</a></th>
   </tr>
 %end
 </table>
