--- a/views/uporabnik.html
+++ b/views/uporabnik.html
@@ -93,9 +93,8 @@
 
 %for id,uporabnik,oznaka,kolicina in trans_delnice:
 <tr>
-  <th> {{oznaka}} </th>
+  <th><a href="{{ROOT}}uporabnik/{{stanje}}/trgovanje/{{oznaka}}/"> {{oznaka}} </a></th>
   <th> {{kolicina}} </th>
-
 </tr>
 %end
 %end
