--- a/views/base.html
+++ b/views/base.html
@@ -37,7 +37,7 @@
           <p>S pomočjo Zelo dobre borze sem končno postal milijonar!</p>
         </blockquote>
         <div class="author">
-          <p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+          <p class="credit">- <strong>Miha</strong> </p>
         </div>
       </div>
     </section>
@@ -48,7 +48,7 @@
             in končno začel potovati po svetu in zaživel brez finančnih skrbi!</p>
         </blockquote>
         <div class="author">
-          <p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+          <p class="credit">- <strong>Mojca</strong></p>
         </div>
       </div>
     </section>
@@ -58,7 +58,7 @@
           <p>Zelo dobra borza mi je pomagala, da sem končno zaživel svoje sanjsko življenje.</p>
         </blockquote>
         <div class="author">
-          <p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+          <p class="credit">- <strong>Marko</strong></p>
         </div>
       </div>
     </section>
