--- a/views/base.html
+++ b/views/base.html
@@ -70,7 +70,7 @@
     <div class="content">
       <section>
         <h3>Omejitev odgovornosti</h3>
-        <p>Nahajate se na spletnem portalu ZELO DOBRE BORZE D.O.O.. Vaš dostop do tega spletnega portala in njegovo 
+        <p>Nahajate se na spletnem portalu ZELO DOBRA BORZA D.O.O.. Vaš dostop do tega spletnega portala in njegovo 
           uporabo urejajo ta splošna pravila kot tudi nekateri zakoni. Z vstopom na spletni portal potrjujete,
            da ste s temi splošnimi pogoji seznanjeni, da z njimi soglašate, ter da vas določbe teh splošnih pogojev
            zavezujejo.
